Actualizacion de funciones y correccion de errores
